<resources>
    <string name="app_name">pet-retail</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_with_googmle">Sign up with google</string>

    <string name="sign_in_login"><u>Sign In</u></string>
    <string name="your_email">Your Email</string>
    <string name="remember_me">Remember me</string>
    <string name="you_don_t_have_an_account">You don\'t have an account ?</string>
    <string name="or_login_with">Or Login with</string>
    <string name="google_id_secret">784826638614-ksk3tta9qa7pivteb6ad4ndjm20r5iql.apps.googleusercontent.com</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="accept_cgu">
        I agree to the
    </string>
    <string name="cgu_term"><u>Term and Conditions</u></string>
    <string name="policy_term"><u>Privacy Policy</u></string>
    <string name="choose_a_pet"><b>Choose</b> a pet</string>
    <string name="filter">Filter</string>
    <string name="available">Pet Available</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="chat">Chat</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an acoount?</string>
    <string name="mes_annonces">My announcements</string>
    <string name="type_a_message">Type a message</string>
    <string name="home">Home</string>
    <string name="facebook_app_id">487533726350076</string>
    <string name="facebook_client_token">21461748c9ccbd53a4231a9f3a0038fa</string>
    <string name="fb_login_protocol_scheme">fb487533726350076</string>
    <string name="google_login_id">967979226316-bb7c9t4dt67i2lfi13ee006tfdahg2mf.apps.googleusercontent.com</string>
    <string name="google_login_id_web">AIzaSyCirGtJK7uUEsPwws4a9160K9dyCzEkE3A</string>
    <string name="menu">Menu</string>
</resources>