<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="6dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="6dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">


    <TextView
        android:id="@+id/sign_in_title"
        android:layout_width="149dp"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="123dp"
        android:layout_marginTop="24dp"
        android:gravity="top"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:background="@drawable/input_text"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <EditText
            android:id="@+id/email"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:hint="@string/your_email"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        style="@style/your_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_text_input_layout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/input_text"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="148dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:background="#00000000"
        android:text="@string/remember_me"
        android:textColorLink="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_layout" />

    <Button
        android:id="@+id/login"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="64dp"
        android:background="#1D4ED8"
        android:enabled="false"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout"
        app:layout_constraintVertical_bias="0.129"
        app:rippleColor="#1D4ED8" />


    <TextView
        android:id="@+id/text_other_login"
        android:layout_width="71dp"
        android:layout_height="15dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:text="@string/or_login_with"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />


    <RelativeLayout
        android:id="@+id/google_login_btn_container"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_other_login"
        tools:context="">

        <Button
            android:id="@+id/google_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/googleg_standard_color_18" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/facebook_login_button_container"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/google_login_btn_container"
        app:layout_constraintTop_toBottomOf="@+id/text_other_login"
        tools:context="">

        <Button
            android:id="@+id/facebook_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="543dp" />

        <ImageView
            android:id="@+id/fb_login_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/com_facebook_button_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/facebook_login_button_container"
        app:layout_constraintTop_toBottomOf="@+id/text_other_login"
        tools:context="">

        <Button
            android:id="@+id/twitter_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="543dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/fui_ic_twitter_bird_white_24dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="283dp"
        android:layout_height="18dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_login_button_container">

        <TextView
            android:id="@+id/text_no_account"
            android:layout_width="140dp"
            android:layout_height="14dp"
            android:gravity="start"
            android:text="@string/you_don_t_have_an_account"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="140dp"
            android:gravity="start"
            android:text="@string/sign_in_login"
            android:textColor="#1D4ED8"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/text_no_account" />
    </RelativeLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>